sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_1-2.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res2
---
GetWorkspacesResponse {
    workspaces: [
        GetWorkspacesResponseItem {
            workspace_id: "CnDOE6ijtGMkqxcGIFQpOM5Q6T-uhf2nN3eIomooFdcs81ku7i_JYBcA8-9r6cSE",
            workspace_name: "workspace1",
            created_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
            deleted_at: None,
        },
    ],
}
