sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_1-3.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res3
---
DeleteWorkspaceResponse
