sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_1-4.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res4
---
GetWorkspacesResponse {
    workspaces: [],
}
