sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_1-5.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res5
---
GetWorkspacesResponse {
    workspaces: [
        GetWorkspacesResponseItem {
            workspace_id: "5BsQjs0o5VdemnYgiIXkqWYvUcYaoR7xh5dJeTQ6mFCrgdiyhaG8i25tNIrVAV0e",
            workspace_name: "workspace1",
            created_at: SystemTime {
                tv_sec: 1261440000,
                tv_nsec: 0,
            },
            deleted_at: Some(
                SystemTime {
                    tv_sec: 1261440000,
                    tv_nsec: 0,
                },
            ),
        },
    ],
}
