sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_1.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res1
---
CreateWorkspaceResponse {
    workspace_id: "CnDOE6ijtGMkqxcGIFQpOM5Q6T-uhf2nN3eIomooFdcs81ku7i_JYBcA8-9r6cSE",
}
