sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_2-2.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res2
---
Found {
    blob_id: "5BsQjs0o5VdemnYgiIXkqWYvUcYaoR7xh5dJeTQ6mFCrgdiyhaG8i25tNIrVAV0e",
    size: 10,
}
