sagitta-remote-system-db/tests/snapshots/test_sqlite__sqlite_workspace_2.snap
---
source: sagitta-remote-system-db/tests/test_sqlite.rs
expression: res1
---
Created {
    blob_id: "5BsQjs0o5VdemnYgiIXkqWYvUcYaoR7xh5dJeTQ6mFCrgdiyhaG8i25tNIrVAV0e",
}
